<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="3"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="4"
        android:title="@string/help"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_action_menu"
        android:orderInCategory="1"
        android:title="@string/menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/orderList"
        android:icon="@drawable/ic_baseline_list_24"
        android:orderInCategory="2"
        android:title="@string/orderList"
        app:showAsAction="always" />
</menu>