<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ChooseCategoryRestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/addPlateRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/aclonica"
            android:onClick="onRadioButtonClicked"
            android:text="@string/FoodCatText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/addStarterRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/aclonica"
            android:onClick="onRadioButtonClicked"
            android:text="@string/StartersCatText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/addDrinkRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/aclonica"
            android:onClick="onRadioButtonClicked"
            android:text="@string/DrinksCatText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/addDessertRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/aclonica"
            android:onClick="onRadioButtonClicked"
            android:text="@string/DessertsCatText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/dishNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/dishName"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dishNameEdit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/dishPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/dishPrice"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dishPriceEdit"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:inputType="number"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/dishImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/dishImage"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@android:id/icon"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"

        android:onClick="selectImage"
        android:src="@drawable/empty" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:onClick="onClickAdd"
        android:text="@string/Add" />

</LinearLayout>