<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg5"
    tools:context=".ResetPassRestActivity">
    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:fontFamily="@font/aclonica"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="240dp"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:hint="@string/emailText" />

    <EditText
        android:id="@+id/Password"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:layout_width="250dp"
        android:fontFamily="@font/aclonica"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:hint="@string/newPassText" />

    <EditText
        android:id="@+id/Password2"
        android:layout_width="250dp"
        android:fontFamily="@font/aclonica"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/passText2"
        />

    <Button
        android:id="@+id/addClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="onClickReset"
        android:fontFamily="@font/aclonica"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/resetPassText" />
</LinearLayout>