<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical"
    tools:context=".EditAboutActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mobileDescRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/aclonica"
            android:text="@string/mobileDesc"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editMobileRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/passDescRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/passText"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/oldPasswordRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:hint="@string/oldPassText"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/newPasswordRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:hint="@string/newPassText"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/confirmPasswordRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:hint="@string/passText2"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/submitBtnRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/aclonica"
        android:onClick="onClickSubmitChangesRest"
        android:text="@string/submitChanges" />


</RelativeLayout>